   - djm@cvs.openbsd.org 2007/06/13 00:21:27      [scp.c]      don't ftruncate() non-regular files; bz#1236 reported by wood AT      xmission.com; ok dtucker@